@@ -1,8 +1,4 @@
 editor
 
-eye/ear candy:
-stereo sound
-shine effect
-
-already known bugs:
+known bugs:
 l10n doesn't work though mo file is installed???
